--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html><head><base href="https://browsergames.com/play/slitherio">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WT7C9PW68E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WT7C9PW68E');
+</script>
 <title>Play Ghost.io</title>
 <style>
   body, html {
