--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html><head><base href="https://browsergames.com/play/slitherio">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WT7C9PW68E"></script>
+<html>
+  <head>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-WT7C9PW68E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -7,6 +8,7 @@
 
   gtag('config', 'G-WT7C9PW68E');
 </script>
+  <base href="https://browsergames.com/play/slitherio">
 <title>Play Ghost.io</title>
 <style>
   body, html {
