--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  
   <head>
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-WT7C9PW68E"></script>
 <script>
