--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-WT7C9PW68E');
 </script>
     <base href="https://browsergames.com/play/slitherio">
-<title>Play Ghost.io - BrowserGames.com</title>
+<title>Play Ghost.io</title>
 <style>
   body, html {
     margin: 0;
